Moved certain paddings into a css file to address possible issue with tailwind padding on certain devices. And added scroll to the page itself in case of overflow

--- a/view/src/App.css
+++ b/view/src/App.css
@@ -13,7 +13,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /* Your existing button menu styles */
